[MTB] fixed spacing?

--- a/styles/MobileTabBar.module.css
+++ b/styles/MobileTabBar.module.css
@@ -27,3 +27,7 @@
 .tab.active{
     border-top: 0.3em solid var(--rust-blood);
 }
+
+.option {
+    width: 100%;
+}
